[package]
name = "dataset-muncher"
version = "0.1.0"
authors = ["Mark Mansi <markm@cs.wisc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
csv = "1.1.1"
clap = "2.33.0"
serde = { version = "1.0.103", features = ["derive"] }
rayon = "1.2.1"
itertools = "0.8.2"
